--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HospitaAppointmentSystem
 @using HospitaAppointmentSystem.Models
+@using HospitaAppointmentSystem.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
