--- a/Views/Doctor/Index.cshtml
+++ b/Views/Doctor/Index.cshtml
@@ -22,7 +22,7 @@
                     <td>@Html.DisplayFor(modelItem=> item.DocEmail)</td>
                     <td>@Html.DisplayFor(modelItem=> item.DocSpeacialty)</td>
                     <td>
-                        <a href="" class="btn btn-sm btn-primary">Details</a>
+                        <a asp-controller="Doctor" asp-action="EditDoc" asp-route-id="@item.DoctorId" class="btn btn-sm btn-primary">Edit</a>
                         <a href="" class="btn btn-sm btn-danger">Delete</a>
                     </td>
                 </tr>
