--- a/Views/Patient/EditPatient.cshtml
+++ b/Views/Patient/EditPatient.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Edit Patient</h2>
 <hr>
-<form asp-controller="Patient" asp-action="CreatePatient" method="post">
+<form asp-controller="Patient" asp-action="EditPatient" method="post">
     <input type="hidden" asp-for="PatientId">
     <div class="mb3">
         <label asp-for="PatientName" class="form-label">Patient Name</label>
