--- a/Views/Patient/IndexPatient.cshtml
+++ b/Views/Patient/IndexPatient.cshtml
@@ -7,6 +7,7 @@
     <table class="table table-bordered">
         <thead>
             <tr>
+                <th>@Html.DisplayNameFor(m=> m.PatientId)</th>
                 <th>@Html.DisplayNameFor(m=> m.PatientName)</th>
                 <th>@Html.DisplayNameFor(m=> m.PatientSurname)</th>
                 <th>@Html.DisplayNameFor(m=> m.PatientEmail)</th>
@@ -17,13 +18,14 @@
             @foreach(var item in Model)
             {
                 <tr>
+                    <td>@Html.DisplayFor(modelItem=> item.PatientId)</td>
                     <td>@Html.DisplayFor(modelItem=> item.PatientName)</td>
                     <td>@Html.DisplayFor(modelItem=> item.PatientSurname)</td>
                     <td>@Html.DisplayFor(modelItem=> item.PatientEmail)</td>
                     <td>@Html.DisplayFor(modelItem=> item.PatientPhone)</td>
                     <td>
-                        <a asp-controller="Patient" asp-action="EditPatient" asp-route-id="@item.PatientId" class="btn btn-sm btn-primary">Edit</a>
-                        <a href="" class="btn btn-sm btn-danger">Delete</a>
+                        <a asp-action="EditPatient" asp-route-id="@item.PatientId" class="btn btn-sm btn-primary">Edit</a>
+                        <a asp-action="DeletePatient" asp-route-id="@item.PatientId" class="btn btn-sm btn-danger">Delete</a>
                     </td>
                 </tr>
             }
