--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,8 @@
 @using HospitaAppointmentSystem.Models
 @using HospitaAppointmentSystem.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Identity
+@using HospitaAppointmentSystem.ViewModels
+
+
+@addTagHelper HospitaAppointmentSystem.TagHelpers.*,HospitaAppointmentSystem
