--- a/Views/Appointment/EditAppointment.cshtml
+++ b/Views/Appointment/EditAppointment.cshtml
@@ -6,7 +6,11 @@
     <input type="hidden" asp-for="AppointmentId">
     <div class="mb3">
         <label asp-for="AppointmentDate" class="form-label">Appointment Date</label>
-        <input asp-for="AppointmentDate" class="form-control">
+        <input asp-for="AppointmentDate" type="date" class="form-control">
+    </div>
+
+    <div class="mb3">
+        <select asp-for="AppointmentTime" asp-items="ViewBag.AvailableTimes" class="form-control"></select>
     </div>
 
     <button type="submit" class="btn btn-secondary">Save</button>
