--- a/Views/Appointment/CreateAppointment.cshtml
+++ b/Views/Appointment/CreateAppointment.cshtml
@@ -20,14 +20,14 @@
     }
 
     <div class="mb3">
-        <label asp-for="DoctorId" class="form-label">Doctor Id</label>
+        <label asp-for="DoctorId" class="form-label">Doctor Name</label>
         <select asp-for="DoctorId" asp-items="ViewBag.Doctors" class="form-control">
             <option value="">Choose</option>
         </select>
     </div>
 
     <div class="mb3">
-        <label asp-for="PatientId" class="form-label">Patient Id</label>
+        <label asp-for="PatientId" class="form-label">Patient Name</label>
         <select asp-for="PatientId" asp-items="ViewBag.Patients" class="form-control">
             <option value="">Choose</option>
         </select>
